feat: 迁移到 LangChain4j 官方集成并完成工程化加固（Stage 0~4）
Stage 0 —— 用手写 AI 层替换为 LangChain4j 官方能力：
- 手写 ReAct 循环 / 裸 milvus-sdk / Guava 上下文窗口 → AiServices + @Tool + EmbeddingStore + ChatMemory
- 删除 MilvusVectorStore、ContextWindowManager 及其配置与测试
- Milvus 不可用时回退 InMemoryEmbeddingStore，保持优雅降级

Stage 1 —— 接通已有断点：
- ConversationService 实现会话/消息落库；AgentTools 经 @ToolMemoryId 注入 sessionId 并记录 tool_calls
- MemoryPromptBuilder 注入长期记忆；GlobalExceptionHandler + ApiError 统一错误体
- 修复 ChatController 传 conversationId=null

Stage 2 —— 多路召回 + RRF 融合：
- RrfFusion（纯函数，k=60）+ RetrievalHit；RagService.searchWithFusion 两路并行且各自独立容错
- HybridContentRetriever 让对话链路也走混合检索；/documents/search/detailed 暴露分数与各路排名
- DocumentParser 补充 .txt/.md 支持

Stage 3 —— 流式输出 + 真实 token 计量：
- Assistant.chat 改返回 Result<String>，直接获得 tokenUsage()/toolExecutions()，无需 ChatModelListener
- StreamingChatService + POST /chat/stream（SSE 事件 token/tool/sources/done/error）
- TokenUsageResolver：真实用量优先，缺失时估算回退并标记 tokensEstimated
- 修复 TokenCounter.calculateCost 的千倍低估（per-token 单价被多除了 1000）

Stage 4 —— 工程化加固：
- 认证：Spring Security + ApiKeyAuthFilter（X-API-Key，常数时间比较，可配多密钥与免认证白名单）
- 限流：TokenBucket + RateLimitFilter（按调用方分桶，超限 429 + Retry-After）
- 迁移：Flyway 按数据库厂商隔离脚本（db/migration/{vendor}），ddl-auto 改为 none，
  删除已失效且与实体漂移的 schema.sql
- 评测：RetrievalEvaluator + Recall@K/Precision@K/MRR/HitRate，POST /evaluation/retrieval

测试：70 个用例全部通过（原 43 个）。新增 MigrationSchemaTest 在关掉 ddl-auto 后
兜底校验迁移脚本与 JPA 实体映射的一致性（8 张表逐表真实读写）。

README 重写：原版仍在描述 Stage 0 已删除的 ReAct 循环与 ContextWindowManager，
且 curl 示例未带 API Key（现已必需）会返回 401。

注：MySQL 版迁移脚本、ddl-auto=validate 路径与真实大模型链路未在本机验证
（本机无 MySQL 实例且无有效 OPENAI_API_KEY）。